# GOT

./: .gitignore  CHECkSUM  CMakeLists.txt  TXT2  package-lock.json  package.json
changedFiles/: TXT1.json
client/: GOT  main.cpp
db/: db.sql
src/: CHECkSUM  Cambios.txt  arbol.json  database.js  huffman.js  server.js
src/Diff/: CHECkSUM  Cambios.txt  TXT1  diff.js  index.js  oldiff.js  package.json
src/Diff/files/: TXT4
src/Diff/txtSRV/: TXT3  TXT4
src/Routes/: GOT_Routes.js  employees.js
